[package]
name = "qr"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"

serde = "1.0.123"

env_logger = "0.8.2"
log= "0.4.13"

bson = "1.1.0"

lazy_static = "1.4.0"

dashmap="4.0.2"

# bytes = "1.0.1"

actix-http="2.2.0"


tokio={features=["time"], version="0.2.24"}

urandom = "0.1.0"


structopt = "0.3.21"
clap-verbosity-flag = "0.3.1"
# clap-log-flag = "0.2.1"
