[package]
name = "loadgen"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"

env_logger = "0.8.2"
log= "0.4.13"

bson = "1.1.0"

lazy_static = "1.4.0"

dashmap="4.0.2"

tokio={version="1.2.0", features = ["full"]  }

urandom = "0.1.0"

mongodb="2.0.0-alpha"

structopt = "0.3.21"
clap-verbosity-flag = "0.3.1"
# clap-log-flag = "0.2.1"

anyhow = "1.0.38"

rand = "0.8.3"
rand_pcg = "0.3.0"

stopwatch = "0.0.7"
